--- a/branching-website.html
+++ b/branching-website.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Branching Practice Site</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <title> Branching Practice Site </title>
   </head>
   <body>
     <h1> Branching</h1>
